<resources>
    <string name="app_name">CustomView</string>
    <string name="input_account">请输入用户名</string>
    <string name="edit_clear">带删除的编辑框(组合)</string>
    <string name="edt_password">密码切换编辑框(组合)</string>
    <string name="input_password">请输入密码</string>
    <string name="clock_view">钟表(自定义view)</string>
    <string name="start_view">多边型控件</string>
    <string name="rating_bar">自定义评分控件</string>
    <string name="you_are_best">你是最棒的!</string>
    <string name="circle_progress">圆形进度条</string>
    <string name="memory_progress">内存/存储进度</string>
</resources>