<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="app.lonzh.customview.vm.ComposeViewViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:padding="@dimen/dp_10"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memory_progress"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <app.lonzh.customview.compose.StoreProgress
                android:background="@android:color/holo_blue_bright"
                app:StoreProgress_max_progress="100"
                app:StoreProgress="@{vm.circleProgress}"
                app:StoreProgress_text_color="@color/black"
                app:StoreProgress_text_size="@dimen/text_30sp"
                app:StoreProgress_default_bg="@color/black10"
                app:StoreProgress_progress_bg="@android:color/white"
                app:StoreProgress_content="MEMORY"
                app:StoreProgress_content_text_size="@dimen/text_12sp"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="@dimen/dp_100"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/circle_progress"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <app.lonzh.customview.compose.CircleProgress
                android:id="@+id/circle_progress"
                app:CircleProgress_max_progress="100"
                app:CircleProgress="@{vm.circleProgress}"
                app:CircleProgress_text_color="@color/black"
                app:CircleProgress_text_size="@dimen/text_30sp"
                app:CircleProgress_default_bg="@android:color/holo_blue_dark"
                app:CircleProgress_progress_bg="@android:color/holo_red_dark"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="@dimen/dp_100"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_bar"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <app.lonzh.customview.compose.RatingBar
                android:background="@color/black10"
                android:layout_marginTop="@dimen/dp_10"
                app:ratingBar_max_progress="10"
                app:ratingBar_progress="6"
                app:ratingBar_des_color="@color/purple_500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_star"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_view"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <app.lonzh.customview.compose.StarView
                android:id="@+id/star_view"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/black15"
                app:star_line_color="@color/purple_500"
                app:star_flag="STROKE"
                app:star_number="8"
                app:star_fill_percent="0.5"
                app:star_stroke_width="@dimen/dp_2"
                android:layout_width="@dimen/dp_100"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_clock"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clock_view"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <app.lonzh.customview.compose.ClockView
                android:background="@color/black10"
                android:id="@+id/clock_view"
                app:clock_hour_color="@android:color/holo_green_dark"
                app:clock_date_text_size="@dimen/text_12sp"
                app:clock_minute_color="@android:color/holo_blue_dark"
                app:clock_second_color="@android:color/holo_red_dark"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="@dimen/dp_200"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/edit_clear"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <app.lonzh.customview.compose.EditClearView
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/shape_edt_bg"
                app:edt_clear_hint="@string/input_account"
                app:edt_clear_hint_color="@color/black10"
                app:edt_clear_text_color="@color/black"
                android:paddingEnd="@dimen/dp_10"
                app:img_clear_icon="@drawable/ic_login_clear"
                app:img_clear_width="@dimen/dp_38"
                app:img_clear_height="@dimen/dp_38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edt_password"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <app.lonzh.customview.compose.EditPasswordView
                android:id="@+id/edt_password_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/shape_edt_bg"
                app:edt_password_hint="@string/input_password"
                app:edt_password_hint_color="@color/black10"
                app:edt_password_text_color="@color/black"
                app:img_password_width="@dimen/dp_40"
                app:img_password_height="@dimen/dp_40"
                app:img_password_icon="@drawable/selector_login_eye"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>